--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,4 +1,4 @@
-/* .container{
+.container{
     display: flex;
     justify-content: center;
 }
@@ -19,4 +19,4 @@
  .hero-section{
     margin-top: 340px;
     padding: 10px;
- } */
+ }
