--- a/src/Components/Layout/layout.css
+++ b/src/Components/Layout/layout.css
@@ -1,50 +1,44 @@
-*{
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
-    font-family: sans-serif;
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  font-family: sans-serif;
 }
-body{
-background-color: #dd8ec4;
+body {
+  background-color: #dd8ec4;
 }
 
-
-
-
-#header{
-    background-color: #766403a7;
-    color: beige;
-    transition: all 0.5s;
-    z-index: 990;
-    height: 85px;
-    display: flex;
-
+#header {
+  background-color: #766403a7;
+  color: beige;
+  transition: all 0.5s;
+  z-index: 990;
+  height: 85px;
+  display: flex;
 }
-.navbar ul{
-    margin:0;
-    padding: 0;
-    display: flex;
-    list-style: none;
-    align-items: center;
-  
-
+.navbar ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  list-style: none;
+  align-items: center;
 }
-.navbar li{
-    position: relative;
+.navbar li {
+  position: relative;
 }
 
 .navbar a,
-.navbar a:focus{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 0 10px 30px;
-    font-family: sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    color: black;
-    white-space: nowrap;
-    transition: 0.3s;
+.navbar a:focus {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0 10px 30px;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: black;
+  white-space: nowrap;
+  transition: 0.3s;
 }
 .navbar a i,
 .navbar a:focus i {
@@ -53,219 +47,134 @@ background-color: #dd8ec4;
   margin-left: 5px;
 }
 
-
- .nav-item .nav-link {
-    color: black;
-    text-transform: uppercase;
-   
+.nav-item .nav-link {
+  color: black;
+  text-transform: uppercase;
 }
-.nav-link:hover , 
+.nav-link:hover,
 .nav-link:active {
   color: rgb(228, 151, 43);
-    transition: 5s;
-    text-decoration: underline;
+  transition: 5s;
+  text-decoration: underline;
 }
-.btn{
-    background-color: rgb(100, 100, 13);
-    color: white;
+/* header button */
+.btn {
+  background-color: rgb(100, 100, 13);
+  color: white;
 }
-.btn :hover{
+.btn a:hover {
   text-decoration: underline;
   background-color: rgb(100, 100, 13);
   color: white;
 }
 
-/* change start */
-#sidebar-active{
-  display: none;
-  
-}
-.open-sidebar-button , .close-sidebar-button{
-
- align-items: flex-end;
-  padding: 0 ;
-  display: none;
-}
-
-@media(max-width: 1250px) {
-  .position-relative{
-   
-    flex-direction: column;
-    align-items: flex-start;
-    position: fixed;
-    top: 150px;
-    right: -100%;
-    z-index: 10;
-    width: 190px;
-    
-    background-color: #B5C18E;
-    transition: 0.85s ease-out;
-  }
-  nav li{
-    box-sizing: border-box;
-    height:auto;
-    width:100%;
-   
-    justify-content: flex-start;
-    text-decoration: none;
-  }
-  
-  .open-sidebar-button , .close-sidebar-button{
-    display: block;
-   padding: 0 0px;
-  }
-  #sidebar-active:checked  ~  .position-relative{
-    padding:0  10px;
-    right: 0;
-   
-  }
-  #sidebar-active:checked  ~  .overlay{
-   height: 100%;
-   width: 100%;
-   position: fixed;
-   top: 0;
-  left:0;
-  z-index: 9;
-   
-  }
-}
-  
-  
-  
-  .mobile-nav-toggle {
-    display: none;
-  }
-  
- 
-
-  .footer-heading .footer-para{
-color: white;
-  }
-  .logo-column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-}
-.logo-footer {
-    position: absolute;
-    bottom: 20px;
-    left: 0;
-    max-width: 200px;
-    max-height: 210px;
-    top:20px;
-}
-
-.logo-footer:nth-child(2) {
-    z-index: 2;
-    left: 20px;
-    margin-top: 40px;
-    margin-bottom: 20px;
-    align-items: center;
-    margin-left: 200px;
-}
 
 
-.footer {
-    overflow: hidden;
-    background: rgba(var(--color-black-rgb), 0.8);
-    font-size: 16px;
-    color: rgba(var(--color-white-rgb), 0.7);
-  }
-  
-  .footer .footer-content {
-    padding: 60px 0;
-  }
-  
-  .footer a.footer-link-more {
-    color: rgba(var(--color-white-rgb), 0.7);
-    display: inline-block;
-    position: relative;
-  }
-  
-  .footer a.footer-link-more:before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 1px;
-    background: var(--color-white);
-  }
-  
-  .footer a.footer-link-more:hover {
-    color: rgba(var(--color-white-rgb), 1);
-  }
-  
-  .footer .footer-heading {
-    color: var(--color-white);
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    font-size: 18px;
-  }
-  
-  .footer .footer-blog-entry li {
-    margin-bottom: 20px;
-    display: block;
-  }
-  
-  .footer .footer-blog-entry li a .post-meta {
-    font-size: 10px;
-    letter-spacing: 0.07rem;
-    text-transform: uppercase;
-    font-weight: 400;
-    font-family: var(--font-secondary);
-    color: rgba(var(--color-white-rgb), 0.4);
-    margin-bottom: 0px;
-  }
-  
-  .footer .footer-blog-entry li a img {
-    flex: 0 0 50px;
-    width: 50px;
-  }
-  
-  .footer .footer-links li {
-    margin-bottom: 10px;
-  }
-  
-  .footer .footer-links li a {
-    color: rgba(var(--color-white-rgb), 0.7);
-  }
-  
-  .footer .footer-links li a:hover,
-  .footer .footer-links li a:focus {
-    color: rgba(var(--color-white-rgb), 1);
-  }
-  
-  .footer .footer-legal {
-    background: var(--color-black);
-    padding: 40px 0;
-  }
-  
-  .footer .footer-legal .social-links a {
-    text-align: center;
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background-color: rgba(var(--color-white-rgb), 0.09);
-    border-radius: 50%;
-    color: var(--color-white);
-    line-height: 40px;
-  }
-  
-  .footer .footer-legal .social-links a:hover {
-    background-color: rgba(var(--color-white-rgb), 0.2);
-  }
-  
-  .footer .copyright strong {
-    font-weight: 400;
-  }
-  
-  .footer .credits {
-    padding-top: 6px;
-    font-size: 13px;
-  }
-  
-  .footer .credits a {
-    color: var(--color-white);
-  }
+
+/* footer element CSS */
+/* done */
+.footer{
+  background-color: #1f1f1ef3;
+}
+.footer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  margin-top: 5px;
+  padding: 10px;
+  margin-left: 20px;
+}
+/* done */
+.footer-content {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  margin-right: 5px;
+  column-gap: 20px;
+  row-gap: 20px;
+  background-color: #12020b;
+}
+
+/* done */
+.footer-about {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-self: flex-start;
+  width: 500px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 7px;
+  margin-right: 9px;
+  column-gap: 20px;
+  row-gap: 20px;
+  background-color: #12020b;
+}
+
+/* done */
+.footer-navigation {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: self-start; */
+  align-items: center;
+  max-width: max-content;
+  margin: 10px;
+  padding: 7px;
+  background-color: #0e0309;
+}
+/* done */
+.footer .footer-heading {
+  display: flex;
+  align-self: start;
+  align-items: normal;
+  margin-bottom: 5px;
+  padding-bottom: 10px;
+  font-size: x-large;
+  color: white;
+}
+/* done */
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  width: 650px;
+  margin-top: 5px;
+  padding: 5px;
+  font-weight: medium;
+  font-size: large;
+  font-family: sans-serif;
+}
+
+/* done */
+.footer-para {
+  padding: 0;
+  margin-top: 0px;
+  font-family: "Times New Roman", Times, serif;
+  color: white;
+}
+
+/* done */
+
+/* done
+ */
+.footer-content .logo-column {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 470px;
+  height: auto;
+  margin: 0 15px;
+  /* top right bottom left */
+  padding: 10px;
+  background-color: #0d1005;
+}
+
+/* done */
+.footer .footer-links li a:hover,
+.footer .footer-links li a:focus {
+  color: whitesmoke;
+  text-decoration: underline;
+}
