--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -4,42 +4,41 @@
     }
 }
 
-.col {
-    padding-left: 10px;
-    padding-right: 20px; /* Adjust padding as needed */
-  }
-
-
-
 * {
     margin: 0px;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 header {
+    display: flex;
     margin: 5px;
     padding: 5px;
     height: 100%;
     width: 100%;
     position: relative;
-    /* background: #e1d9c8; */
     color: rgb(34, 96, 195);
 }
 
-header .container {
+header .login-container {
     margin: 20px 20px 20px 20px;
     padding-top: 50px;
     padding-bottom: 5px;
-
+}
+.caption-text{
+    font-size: 50px;
+    font-weight: bold;
+    color: #0d0d0d;
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
+.caption-text p{
+    font-size: 15px;
+    color: #0d0d0d;
+   
 }
 
-
-
-
-.row {
-    margin: 7px;
+.login-body {
     padding: 6px;
     display: flex;
     flex-wrap: wrap;
@@ -47,44 +46,41 @@ header .container {
     flex-wrap: wrap;
 }
 
-
-.text-left {
+.login-section {
+    justify-content: center;
+    padding-left: 20px;
+    /* padding-right: 10px; Adjust padding as needed */
     flex: 1;
     justify-content: left;
     padding-right: 24px;
     padding-top: 50px;
-
 }
-
 
 .logo-img {
     max-width: 350px;
-     /* Set the maximum width of the logo  */
     max-height: 205px;
-    /* Set the maximum height of the logo */
-    margin: 1px; 
-     padding: 0; 
+    margin: 1px;
+    padding: 0;
 }
 
 .login-logo {
     width: 50%;
     height: 20%;
 }
-.login-logo h2{
+
+.login-logo h2 {
     color: black;
     margin: 0;
 }
 
-.text-right {
+/* .text-right {
     flex: 1;
     float: right;
-}
+} */
 
 div {
     display: block;
 }
-
-
 
 h3 {
     font-size: 28px;
@@ -92,22 +88,18 @@ h3 {
     margin-top: -10px;
     margin-left: 20px;
     letter-spacing: 0.2px;
-
-
 }
 
 .img {
-
     height: 200;
     width: 250;
     padding-bottom: 20px;
 }
 
 .login-form {
-    margin: 10px;
+    margin: 15px;
     padding-top: 20px;
-   
-    width: 480px;
+    width: 85%;
     background-color: #9DBC98;
     border-radius: 8px;
     margin-top: -50px;
@@ -115,16 +107,15 @@ h3 {
     padding: 20px 0 28px;
 }
 
-
-.form_body {
+.form-body {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
     flex-direction: column;
     padding: 0 12px;
-    gap: 15px;
+    gap: 5px;
 }
-   h2{
+
+h2 {
     color: #000610;
 }
 
@@ -133,7 +124,15 @@ h3 {
     color: #090808;
     margin: 20px 0;
     font-size: x-large;
-  }
+}
+
+label {
+    justify-content: flex-start;
+    align-self: flex-start;
+    display: block;
+    margin: 0 0 0 15px;
+    font-weight: bold;
+}
 
 form .login-input {
     flex: 1;
@@ -142,60 +141,56 @@ form .login-input {
     border-radius: 5px;
     color: #1d2129;
     outline-color: #8AB7EF;
-    padding: 14px 16px;
+    padding: 10px 12px;
+    margin: 3px 0 10px 15px; /* Adjust margin to minimize gap */
     justify-content: center;
-    width:95%;
-
+    width: 95%;
 }
 
 .text-head {
-    color: #175d08
+    color: #175d08;
 }
 
-
-.text-header{
+.text-header {
     color: #103707;
 }
 
-
-
-
-.login-btn {
-
-    background-color: rgb(50, 50, 8);
+.login-btn{
     font-size: 20px;
-    color: #ffffff;
-    line-height: 48px;
-    padding: 0 16px;
-    border: none;
     cursor: pointer;
-    border-radius: 6px;
-    font-weight: bold;
+    font-weight: bold; 
     letter-spacing: 0.25;
-    width: 100%;
-    
-}
-
-
-
-hr {
-    background-color: #000610;
-    height: 0.6px;
-}
-
-
-.create {
-
-    background-color: rgb(32, 89, 10);
-    font-size: 17px;
-    cursor: pointer;
+    width: 25%;
+    background-color: #0a8284;
     color: white;
-    height: 35px;
-    width: 192px;
-    letter-spacing: 0.25;
-    font-weight: bold;
     border: none;
-    border-radius: 6px;
-    align-self: center;
-
+    border-radius: 5px;
+    cursor: pointer;
 }
+
+.signup-link{
+    text-decoration:none;
+    color: blue;
+    font-weight: bold;
+    margin-left: 5px;
+}
+.signup-link:hover{
+    color: darkblue;
+    text-decoration: underline;
+}
+
+.forget-password{
+    text-decoration: none;
+    font-weight: bold;
+    margin-left: 5px;
+}
+.forget-password:hover{
+    color: darkblue;
+    text-decoration: underline;
+}
+
+
+/* label milaunu parne
+width(input) milaunu parne
+button ra forget pass lai left allign
+ */
