--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -14,15 +14,13 @@
   margin-top: 50px;
   padding: 20px;
   width: 87%;
- height: fit-content;
- /* background-color: #ffeff6; */
+  height: fit-content;
+  /* background-color: #ffeff6; */
   border: none;
   border-radius: 10px;
 }
-.main-part{
+.main-part {
   background: linear-gradient(to right, #dac9d1, #c4d7eb);
-  
-
 }
 
 /* .section:nth-child(even) {
@@ -40,7 +38,7 @@
   align-items: center;
   font-display: block;
   font-weight: bold;
-  font-size: 50px;
+  font-size: 40px;
   color: #000;
   padding-left: 10px;
   font-family: var(--font-primary);
@@ -48,12 +46,12 @@
 .text #sakhi {
   color: #e71cb4;
   padding-left: 0px;
-  font-size: 50px;
+  font-size: 40px;
   font-family: var(--font-primary);
 }
 
 .text p {
-  font-size: 25px;
+  font-size: 18px;
   color: #000;
   padding-left: 10px;
   font-family: var(--font-secondary);
@@ -69,10 +67,15 @@
 .img-section .home-img {
   width: 655px;
   height: 540px;
-  margin-bottom: 5px;
-  margin-left: 20px;
+  margin-left: 40px;
   margin-right: 10px;
-  border-radius: 15px;
+}
+
+.home-img {
+  width: 510px;
+  height: 300px;
+  margin-left: 20px;
+  border-radius:15px ;
 }
 
 .row {
@@ -87,15 +90,17 @@
   align-items: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 15px, 20px;
+  padding: 10px ;
   margin-right: 50px;
   width: max-content;
   height: fit-content;
   font-weight: bold;
-  font-size: large;
+  font-size: 20px;
+  color: white;
   background-color: #e71cb4;
   border-radius: 10px;
   margin-left: 20px;
+  border: none;
 }
 /* home section 1 css */
 
@@ -103,7 +108,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 25px;
+  margin-top: 35px;
   margin-bottom: 10px;
   padding: 5px;
   padding-left: 35px;
@@ -111,18 +116,22 @@
   margin-left: 6%;
   width: 85%;
   height: fit-content;
-  
 }
-.home-section-1 .text-heading{
-  color:#003b78
-  
+.home-section-1 .text-heading h1 {
+  color: #e71cb4;
+  text-align: center;
+  margin-left: 8px;
+  font-family: var(--font-primary) !important;
+  font-size: 40px !important ;
+  font-weight: bold !important;
 }
 
-.home-section-1  .text-box{
-  margin:10px;
+.home-section-1 .text-box p {
+  margin: 5px;
   text-align: justify;
+  font-family: var(--font-secondary) !important;
+  font-size: 18px !important;
 }
-
 
 /* home section 2 CSS */
 
@@ -154,9 +163,9 @@
   padding: 10px;
   margin-right: 50px;
   margin-bottom: 50px;
-  color: #003b78;
+  color: #e71cb4;
   font-family: var(--font-primary) !important;
-  font-size: 50px !important ;
+  font-size: 40px !important ;
   font-weight: bold !important;
 }
 
@@ -167,8 +176,8 @@
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 10px;
-  margin-right: 20px;
-  width: fit-content;
+  margin-right: 15px;
+  width:200px;
   height: fit-content;
   background-color: #e8e0e2;
   border: none;
@@ -188,10 +197,106 @@
   text-align: justify;
 }
 
-.home-img {
-  width: 510px;
-  height: 300px;
-  margin-bottom: 5px;
-  margin-left: 20px;
-  border-radius: 15px;
+/* home section 3 */
+.home-section-3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  padding: 10px;
+  margin-right: 30px;
+  width: 100%;
+  height: fit-content;
+  background-color: #e8e0e2;
+  border: none;
+  border-radius: 10px;
+}
+
+.section-3 {
+  display: flex;
+  /* flex-direction: row; */
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 15px;
+  margin-left: 90px;
+  margin-bottom: 50px;
+}
+.objective-row{
+  display: flex;
+  flex-direction: column;
+}
+
+.main-purpose {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  padding-left: 40px;
+  margin-left: 13%;
+  margin-right: 20px;
+  width: 70%;
+}
+
+.main-purpose .text-box h1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* flex-direction: row; */
+  margin-top: 10px;
+ 
+  padding: 10px;
+  margin-right: 50px;
+  margin-bottom: 30px;
+  color: #e71cb4;
+  font-family: var(--font-primary) !important;
+  font-size: 40px !important ;
+  font-weight: bold !important;
+}
+
+.sub-purpose {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  text-align: justify;
+  margin-left: 17%;
+  width: 60%;
+  gap: 20px;
+  height: 200px; /* Adjust the height as needed */
+  overflow-y: auto;
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none;
+}
+.purpose {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: justify;
+  padding: 15px;
+  padding-top: 15px;
+  margin: 10px;
+  background-color: whitesmoke;
+  border-radius: 20px;
+  box-sizing: content-box;
+}
+.purpose .purpose-title h3 {
+  color: #003b78;
+  font-family: var(--font-primary) !important;
+  font-size: 20px;
+  font-weight: bold;
+  padding-bottom: 5px;
+}
+h3 {
+  font-family: var(--font-secondary);
+  margin-left: 0px;
+  font-size: 18px;
 }
